--- a/src/app/contact-edit/contact-edit.component.html
+++ b/src/app/contact-edit/contact-edit.component.html
@@ -26,7 +26,10 @@
             </div>
             <div class="form-group">
                 <button class="btn btn-primary btn-block mt-4" (click)="submitForm()">
-                    Create
+                    <span *ngIf="!isEditing">Create</span> <span *ngIf="isEditing">Update</span>
+                </button>
+                <button *ngIf="isEditing" class="btn btn-primary btn-block mt-4 mx-2" (click)="cancelEdit()">
+                    <span>Cancel</span>
                 </button>
             </div>
         </div>
