--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,23 +5,19 @@
   <table class="table table-striped">
     <thead>
       <tr>
-        <th style="width: 20%">First Name</th>
-        <th style="width: 20%">Second Name</th>
-        <th style="width: 20%">Address</th>
-        <th style="width: 20%">Date of Birth</th>
-        <th style="width: 20%">Phone Number</th>
+        <th style="width: 30%">First Name</th>
+        <th style="width: 30%">Second Name</th>
+        <th style="width: 30%">Date of Birth</th>
         <th style="width: 10%"></th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let elemento of contacts" style="cursor: pointer" (click)="onSelectContact(elemento)">
-        <td>{{ elemento.firstName }}</td>
-        <td>{{ elemento.secondName }}</td>
-        <td>{{ elemento.addresses }}</td>
-        <td>{{ elemento.dateOfBirth | date: 'dd/MM/yyyy'}}</td>
-        <td>{{ elemento.phoneNumbers }}</td>
+      <tr *ngFor="let item of contacts" style="cursor: pointer" (click)="onSelectContact(item)">
+        <td>{{ item.firstName }}</td>
+        <td>{{ item.secondName }}</td>
+        <td>{{ item.dateOfBirth | date: 'dd/MM/yyyy'}}</td>
         <td style="white-space: nowrap">
-          <button class="btn btn-sm btn-danger btn-delete-user" (click)="deleteContact(elemento.id)">
+          <button class="btn btn-sm btn-danger btn-delete-user" (click)="deleteContact(item.id)">
             <span *ngIf="isDeleting" class="spinner-border spinner-border-sm"></span>
             <span>Delete</span>
           </button>
