--- a/src/app/contact-filter/contact-filter.component.html
+++ b/src/app/contact-filter/contact-filter.component.html
@@ -12,7 +12,7 @@
         </div>
         <div class="d-flex flex-row justify-content-left align-items-center">
             <div class="form-group input-group-lg">
-                <label for="fromAge">Age fron: </label><input class="form-control" type="number"
+                <label for="fromAge">Age from: </label><input class="form-control" type="number"
                     formControlName="fromAge" />
             </div>
             <div class="form-group input-group-lg mx-3">
