--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
         <td>{{ item.dateOfBirth | date: 'dd/MM/yyyy'}}</td>
         <td style="white-space: nowrap">
           <button class="btn btn-sm btn-danger btn-delete-user" (click)="deleteContact(item.id)">
-            <span *ngIf="isDeleting" class="spinner-border spinner-border-sm"></span>
+            <span *ngIf="item.isDeleting" class="spinner-border spinner-border-sm"></span>
             <span>Delete</span>
           </button>
         </td>
